--- a/css/style.css
+++ b/css/style.css
@@ -17,11 +17,27 @@ body{
     font-size: 16px;
     line-height: 1.3125;
 }
+h1,
+h2,
+h3,
+h4,
+h5,
+h6{
+    font-family: 'Proxima Nova';
+    line-height: 1.18;
+    margin: 0;
+
+    /* font-weight: 700; */
+
+}
 :hover,
 :active,
 :focus{
     outline: none;
     border: none;
+}
+button:focus{
+    outline: none;
 }
 img{
     display: inline-block;
@@ -53,6 +69,7 @@ button{
     margin-top: -35px;
     margin-left: -35px;
 }
+  
 
 /*********navigation**********/
 header{
@@ -68,7 +85,7 @@ nav{
     z-index: 1;
 }
 #navbar{
-    
+
     display: flex;
     align-items: center;
     padding: 20px 28px; 
@@ -140,10 +157,12 @@ nav{
     background-image: url('../images/background-image.webp');
     background-repeat: no-repeat;
     background-size: cover;
+    background-position: center;
     background-attachment: fixed;
     z-index: -1;
 }
 #banner-overlay{
+    background:linear-gradient(to bottom, #000 0, rgba(0,0,0,0) 150px);;
     background-color: rgba(0,0,0,0.4);
     width: 100%;
     height: 100%;
@@ -163,4 +182,27 @@ nav{
     text-align: center;
 }
 
+#banner-content-inner h1{
+    font-size: 120px;
+    font-weight: 800;
+    line-height: 1.18;
+    color: #fff;
+}
 
+#banner-content-inner button{
+    font-family: inherit;
+    font-size: inherit;
+    font-weight: 600;
+    text-transform: uppercase;
+    background: linear-gradient(262deg, #ff7854, #fd267d);
+    border: none;
+    color: #fff;
+    width: 260px;
+    max-width: 100%;
+    min-height: 55px;
+    border-radius: 100px;
+    margin:20px 8px 0 8px;
+}
+#testimonial{
+    background-color: #fff;
+}
